--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "cors": "^2.8.5",
     "express": "4.17.1",
     "uniqid": "^5.3.0"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
