--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "uniqid": "^5.3.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "cd client && yarn install && yarn build"
   }
 }
