--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "dependencies": {
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
     "cors": "^2.8.5",
+    "es6-promise": "^4.2.8",
     "express": "4.17.1",
+    "mocha": "6.2.1",
+    "mongodb-memory-server": "^6.9.6",
     "mongoose": "5.7.1",
+    "nock": "^13.0.11",
     "nodemon": "^2.0.7",
+    "onchange": "6.1.0",
     "socket.io": "^4.0.0",
+    "tap": "^15.0.1",
     "uniqid": "^5.3.0"
   },
   "scripts": {
     "start": "nodemon server.js",
-    "build": "cd client && yarn install && yarn build"
+    "build": "cd client && yarn install && yarn build",
+    "test": "mocha --watch \"./{,!(node_modules|client)/**/}*.test.js\"",
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test"
   }
 }
