--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "cors": "^2.8.5",
     "es6-promise": "^4.2.8",
     "express": "4.17.1",
-    "mocha": "6.2.1",
+    "helmet": "3.21.1",
+    "mocha": "6.2.3",
+    "mongo-sanitize": "1.0.1",
     "mongodb-memory-server": "^6.9.6",
-    "mongoose": "5.7.1",
+    "mongoose": "5.12.3",
     "nock": "^13.0.11",
     "nodemon": "^2.0.7",
     "onchange": "6.1.0",
+    "snyk": "1.235.0",
     "socket.io": "^4.0.0",
     "tap": "^15.0.1",
     "uniqid": "^5.3.0"
